...
    <item
        android:id="@+id/navigation_reservation"
        android:icon="@drawable/ic_reservation_black_24dp"
        android:title="@string/title_reservation" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_userProfile"
        android:icon="@drawable/ic_reservation_black_24dp"
...
